<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweet Offline</string>
    <string name="title_section1">Following</string>
    <string name="title_section2">Followers</string>
    <string name="title_section3">Custom List</string>
    <string name="action_settings">Settings</string>
    <string name="addUser">This text is below the image</string>
    <string name="hint_name">Name: </string>
    <string name="hint_username">Username: </string>
    <string name="errorButton">OK</string>
    <string name="errorTitle">Valid username is Required</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="clearList">Clear List</string>
    <string name="label_name">Name: </string>
    <string name="label_bio">Bio: </string>
    <string name="label_username">Username: </string>
    <string name = "label_latest_tweet">Latest Tweet: </string>
    <string name="Reply">Reply</string>
    <string name="Favorite">Favorite</string>
    <string name="Retweet">Retweet</string>
    <string name="Fetch">Fetch</string>
    <string name="errorMessage">You must enter a valid username starting with \'@\', containing no spaces with one or more characters</string>
       <string name="confirmTitle">Are You Sure?</string>
   <string name="confirmMessage">
      This will delete the user from this list</string>
   <string name="subscribe">Subscribe</string>
   <string name="unsubscribe">Unsubscribe</string>
   <string name="unfollow">Unfollow</string>
   <string name="follow">Follow</string>
   <string name="remove">Remove</string>
   <string name="whoIs">Get Bio</string>
   <string name="dm">DM</string>
   <string name="confirm">Yes</string>
   <string name="send">Send</string>
   <string name="compose">Compose</string>
   <string name="notifsON">Turn on all notifications</string>
   <string name="notifsOFF">Turn off all notifications</string>
   <string name="configuration">Configuration</string>
   <string name="set_twitter_number">Configure Twitter shortcode</string>
   <string name="twitter_number_desc">Set your Twitter ShortCode</string>
   <string name="signUp">Sign Up</string>
   <string name="account_settings">Account Settings</string>
   <string name="set_status">Set Profile Biography</string>
   <string name="set_status_desc">Set Your Twitter Profile Bio</string>
   <string name="set_location">Set Profile Location</string>
   <string name="set_location_desc">Set Your Twitter Profile Location</string>
   <string name="countryShortCodesSummary">View the list of Twitter Short Codes in your browser</string>
   <string name="countryShortCodes">Find Your Twitter Short Code</string>
   <string name="signUp_desc">Get started with using Twitter\'s SMS service"</string>
   <string name="syncList">Sync With Twitter</string>
   <string name="save">Save</string>
   <string name="twitterIcon">Twitter Icon</string>
   
</resources>
