<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tweet_offline="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/composeTweet"
        android:icon="@drawable/compose_icon"
        android:title="@string/compose"
        tweet_offline:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        tweet_offline:showAsAction="never">
    </item>
    <item
        android:id="@+id/notifsON"
        android:title="@string/notifsON"
        tweet_offline:showAsAction="never">
    </item>
    <item
        android:id="@+id/notifsOFF"
        android:title="@string/notifsOFF"
        tweet_offline:showAsAction="never">
    </item>
    <item
        android:id="@+id/clearList"
        android:title="@string/clearList"
        tweet_offline:showAsAction="never">
    </item>
    <item
        android:id="@+id/syncList"
        android:title="@string/syncList"
        tweet_offline:showAsAction="never">
    </item>

</menu>