<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" android:layout_weight="1">
   <LinearLayout android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" android:padding="5dp">
      <EditText android:id="@+id/usernameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_username"
         android:inputType="textPersonName|textCapWords"></EditText>
      <EditText android:id="@+id/nameEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_name" 
         android:inputType="textPersonName|textCapWords"></EditText>
      <Button android:id="@+id/saveButton" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/save"></Button>
   </LinearLayout>
</ScrollView>